removed script content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	  </section>
 	  
 	  <section id="calc">
-	  	<button id="submit" onclick="tipCalculate()">Submit</button>
+	  	<button id="submit">Submit</button>
 	  </section>
 
 	  <section id="tip">
@@ -43,7 +43,7 @@
 	  </section>
 
 	  <section id="calc">
-	  	<button id="reset" onclick="resetCalc()">Calculate a New Tip</button>
+	  	<button id="reset">Calculate a New Tip</button>
 	  </section>
                                           
 	</div>
