--- a/index.html
+++ b/index.html
@@ -33,17 +33,13 @@
 	  </section>
 	  
 	  <section id="calc">
-	  	<button id="submit">Submit</button>
+	  	<button id="submit" onclick="tipCalculate()">Submit</button>
 	  </section>
 
 	  <section id="tip">
 	  	<h3>Tip to leave = 
 		  <span id="tipamount" class="tip-amount">$0.00</span>
 		</h3> 
-	  </section>
-
-	  <section id="calc">
-	  	<button id="reset">Calculate a New Tip</button>
 	  </section>
                                           
 	</div>
